@@ -16,7 +16,7 @@ table.types th { border: 1px solid; padding: .1em .25em; }
 </td><td></td></tr><tr><td>abeyerr_black_3</td><td>128 x 128</td><td>In menu</td><td><a href="http://www.ebay.com/itm/280828187564">Link</a>
 </td><td></td></tr><tr><td>acme_1</td><td>128 x 128</td><td>In menu</td><td></td><td>Unknown ebay seller
 </td></tr><tr><td>acme_2</td><td>128 x 128</td><td>No</td><td></td><td>Unknown manufacturer
-</td></tr><tr><td>acme_3</td><td>128 x 128</td><td>No</td><td></td><td></td></tr><tr><td>acme_5</td><td>128 x 128</td><td>In menu</td><td></td><td></td></tr><tr><td>acme_6</td><td>128 x 128</td><td>In menu</td><td></td><td></td></tr><tr><td>agk_violet</td><td>128 x 128</td><td>No</td><td></td><td></td></tr><tr><td>august_dp150a</td><td>128 x 128</td><td>Yes</td><td><a href="http://www.amazon.de/dp/B001N96F3I/ref=pe_217221_31005211_dp_1">Link</a>
+</td></tr><tr><td>acme_3</td><td>128 x 128</td><td>No</td><td></td><td></td></tr><tr><td>acme_5</td><td>128 x 128</td><td>In menu</td><td></td><td></td></tr><tr><td>acme_6</td><td>128 x 128</td><td>In menu</td><td></td><td></td></tr><tr><td>acme_7</td><td>128 x 128</td><td>In menu</td><td></td><td></td></tr><tr><td>agk_violet</td><td>128 x 128</td><td>No</td><td></td><td></td></tr><tr><td>august_dp150a</td><td>128 x 128</td><td>Yes</td><td><a href="http://www.amazon.de/dp/B001N96F3I/ref=pe_217221_31005211_dp_1">Link</a>
 </td><td></td></tr><tr><td>avlabs_avl969s</td><td>128 x 128</td><td>In menu</td><td><a href="http://www.avlabs.net">Link</a>
 </td><td></td></tr><tr><td>carrefour_bfv151</td><td>128 x 128</td><td>In menu</td><td><a href="http://www.mjshk.com/products/Digital%20Photo%20Frame/page/DPF815A_Max.htm">Link</a>
 <a href="http://www.prixing.fr/products/bfv151-1-5-pouce-cadre-photo-porte-cles-carrefour-3606605023771">Link</a>
